# Confucius

./: CMakeLists.txt  README.md  STATUS.md
src/: CMakeLists.txt  debugoutput.hpp  driver.cpp  driver.hpp  main.cpp  parser.yy  scanner.ll
test/: calc  comments  compiler_directives  ids  keywords  numbers  operators  strings
